[tool.poetry]
name = "aula-17-bootcamp"
version = "0.1.0"
description = ""
authors = ["rafaelMachado1891 <rafadmn1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
